Revert "Add past events list"
This reverts commit 5989a0589996325b62ca67d7c1717850f3d610d1.

--- a/frontend/app/views/event/guardianLive.scala.html
+++ b/frontend/app/views/event/guardianLive.scala.html
@@ -8,5 +8,5 @@
         <i class="event-logo icon-guardian-live"></i>
     </section>
 
-    @views.html.event.list(eventPortfolio, pageInfo, showPastEvents=true)
+    @views.html.event.list(eventPortfolio, pageInfo)
 }
