Revert "add styling for event list"
This reverts commit 8a4d4cb16e52653ff950ec91c59b3f0ba72f5d58.

--- a/frontend/app/views/fragments/event/item.scala.html
+++ b/frontend/app/views/fragments/event/item.scala.html
@@ -1,9 +1,9 @@
-@(event: model.Eventbrite.RichEvent, isHero: Boolean = false, isMinimal: Boolean = false)
+@(event: model.Eventbrite.RichEvent, isHero: Boolean = false)
 @import views.support.Dates._
 @import configuration.Config
 @import model.Eventbrite._
 
-<li class="event-item @if(!isHero){events-list__item} @if(isHero){event-item--hero} @if(isMinimal){event-item--minimal} js-filter-item" itemscope itemtype="http://schema.org/Event">
+<li class="event-item @if(!isHero){events-list__item} @if(isHero){event-item--hero} js-filter-item" itemscope itemtype="http://schema.org/Event">
     <div class="event-item__container">
         <div class="event-item__media">
             <a href="/event/@event.id" itemprop="image" content="@event.socialImgUrl">
@@ -19,69 +19,67 @@
                     <span itemprop="name" data-filter-key="title">@event.name.text</span>
                 </h4>
 
-                @if(!isMinimal) {
-                    <div class="event-item__time" itemprop="startDate" content="@event.start">@event.start.pretty</div>
+                <div class="event-item__time" itemprop="startDate" content="@event.start">@event.start.pretty</div>
 
-                    <div class="event-item__location" itemprop="location" itemscope itemtype="http://schema.org/Place">
-                        @if(event.venue.name) {
-                            <span class="event-item__location-name" itemprop="name">@event.venue.name</span>
-                        }
-                        @for(location <- event.venue.address) {
-                            @if(location.city) {
-                                <span class="event-item__location-address" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">,
-                                    <span itemprop="addressLocality">@location.city</span>,
-                                    <span itemprop="postalCode">@location.postal_code</span>
-                                </span>
-                            }
-                        }
-                    </div>
-
-                    @if(isHero) {
-                        @for(desc <- event.description) {
-                            <div class="event-item__description" itemprop="description">
-                                @desc.blurb
-                            </div>
+                <div class="event-item__location" itemprop="location" itemscope itemtype="http://schema.org/Place">
+                    @if(event.venue.name) {
+                        <span class="event-item__location-name" itemprop="name">@event.venue.name</span>
+                    }
+                    @for(location <- event.venue.address) {
+                        @if(location.city) {
+                            <span class="event-item__location-address" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">,
+                                <span itemprop="addressLocality">@location.city</span>,
+                                <span itemprop="postalCode">@location.postal_code</span>
+                            </span>
                         }
                     }
+                </div>
+
+                @if(isHero) {
+                    @for(desc <- event.description) {
+                        <div class="event-item__description" itemprop="description">
+                            @desc.blurb
+                        </div>
+                    }
+                }
 
 
-                    <div class="event-item__cta" itemprop="offers" itemscope itemtype="http://schema.org/AggregateOffer">
-                        @if(event.isSoldOut) {
-                            <meta itemprop="availability" content="http://schema.org/SoldOut">
-                        } else {
-                            <meta itemprop="availability" content="http://schema.org/InStock">
-                        }
+                <div class="event-item__cta" itemprop="offers" itemscope itemtype="http://schema.org/AggregateOffer">
+                    @if(event.isSoldOut) {
+                        <meta itemprop="availability" content="http://schema.org/SoldOut">
+                    } else {
+                        <meta itemprop="availability" content="http://schema.org/InStock">
+                    }
 
-                        @if(event.isNoTicketEvent == false) {
-                            <div class="event-item__price">
-                                @for(ticket <- event.generalReleaseTicket) {
-                                    @if(ticket.free) {
-                                        <span class="event-item__price-amount">
-                                            Free
-                                        </span>
-                                    } else {
-                                        @for(pricing <- ticket.cost) {
-                                            <div class="js-event-price">
-                                                <span class="event-item__price-amount js-event-price-value" data-discount-text="@pricing.discountPrice" itemprop="highPrice">
-                                                    @pricing.formattedPrice
-                                                </span>
-                                                <span class="event-item__price-amount-discount js-event-price-discount" data-discount-text="Full price @pricing.formattedPrice" itemprop="lowPrice" content="@pricing.discountPrice">
-                                                   Partners/Patrons: @pricing.discountPrice
-                                                </span>
-                                                <span class="event-item__price-amount-discount js-event-price-saving" data-discount-text="You save @pricing.savingPrice">
-                                                    Save @pricing.savingPrice
-                                                </span>
-                                            </div>
-                                        }
+                    @if(event.isNoTicketEvent == false) {
+                        <div class="event-item__price">
+                            @for(ticket <- event.generalReleaseTicket) {
+                                @if(ticket.free) {
+                                    <span class="event-item__price-amount">
+                                        Free
+                                    </span>
+                                } else {
+                                    @for(pricing <- ticket.cost) {
+                                        <div class="js-event-price">
+                                            <span class="event-item__price-amount js-event-price-value" data-discount-text="@pricing.discountPrice" itemprop="highPrice">
+                                                @pricing.formattedPrice
+                                            </span>
+                                            <span class="event-item__price-amount-discount js-event-price-discount" data-discount-text="Full price @pricing.formattedPrice" itemprop="lowPrice" content="@pricing.discountPrice">
+                                               Partners/Patrons: @pricing.discountPrice
+                                            </span>
+                                            <span class="event-item__price-amount-discount js-event-price-saving" data-discount-text="You save @pricing.savingPrice">
+                                                Save @pricing.savingPrice
+                                            </span>
+                                        </div>
                                     }
                                 }
-                            </div>
-                        }
+                            }
+                        </div>
+                    }
 
-                        <button class="event-item__action" itemprop="url"></button>
+                    <button class="event-item__action" itemprop="url"></button>
 
-                    </div>
-                }
+                </div>
             </a>
         </div>
     </div>
