Refactor page header out into separate component

--- a/frontend/app/views/joiner/staff.scala.html
+++ b/frontend/app/views/joiner/staff.scala.html
@@ -27,14 +27,10 @@
 
     <main class="page-container__inner">
         @fragments.notifications.flashMessage(error)
-        <section class="page-section">
-            <div class="page-section__row">
-                <div class="page-section__primary"></div>
-                <div class="page-section__secondary">
-                    <h1 class="page-headline">Guardian Staff Membership</h1>
-                    <p class="page-intro">All permanent Guardian staff can sign up to the Partner tier of Guardian membership for free (equivalent to £15/month)</p>
-                </div>
-            </div>
+
+        <section class="page-header">
+            <h1 class="page-headline">Guardian Staff Membership</h1>
+            <p class="page-intro">All permanent Guardian staff can sign up to the Partner tier of Guardian membership for free (equivalent to £15/month)</p>
         </section>
 
         <section class="page-section">
