No REM in 1px borders

--- a/frontend/assets/stylesheets/pages/_events-detail.scss
+++ b/frontend/assets/stylesheets/pages/_events-detail.scss
@@ -180,7 +180,7 @@
         text-decoration: none;
         color: inherit;
         padding-bottom: rem(2px);
-        border-bottom: rem(1px) solid;
+        border-bottom: 1px solid;
 
         .theme--guardian-live & {
             border-bottom-color: transparentize($white, .5);
