Refactor functional page layout styles, simplified page-section styles

--- a/frontend/assets/stylesheets/style.scss
+++ b/frontend/assets/stylesheets/style.scss
@@ -5,7 +5,10 @@
 /* ==========================================================================
    Membership components
    ========================================================================== */
+
 @import 'components/action';
+@import 'components/page';
+@import 'components/asides';
 @import 'components/benefits';
 @import 'components/user';
 @import 'components/social';
