--- a/frontend/assets/stylesheets/pages/_help.scss
+++ b/frontend/assets/stylesheets/pages/_help.scss
@@ -10,10 +10,11 @@
 }
 
 .help-faqs {
-    padding-top: rem($gs-gutter);
+    padding-bottom: rem($gs-gutter);
 }
 
 .help-faqs__headline {
     @include fs-headline(3);
+    margin-bottom: 0;
     font-weight: bold;
 }
