--- a/frontend/assets/stylesheets/base/_forms.scss
+++ b/frontend/assets/stylesheets/base/_forms.scss
@@ -204,10 +204,10 @@
 .form-field__half {
     display: inline-block;
     width: 50%;
-    padding-right: rem($gs-gutter);
+    padding-right: rem(12px);
     &:last-of-type {
         padding-right: 0;
-        padding-left: rem($gs-gutter);
+        padding-left: rem(12px);
     }
 }
 
